[gd_scene load_steps=2 format=3 uid="uid://btx1d842b3abu"]

[ext_resource type="Script" path="res://scripts/start_up.gd" id="1_352x0"]

[node name="StartUp" type="Node"]
script = ExtResource("1_352x0")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="char_textbox" type="TextEdit" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Chuu"

[node name="team_numbox" type="SpinBox" parent="UI/VBoxContainer"]
layout_mode = 2
max_value = 1.0
alignment = 1
prefix = "Time:"

[node name="btn_server" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Iniciar Servidor"

[node name="btn_client" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Entrar em Servidor"

[node name="Game" type="Node" parent="."]

[node name="MapaSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://cenas/mapa.tscn")
spawn_path = NodePath("../Game")
spawn_limit = 1

[connection signal="text_changed" from="UI/VBoxContainer/char_textbox" to="." method="_on_char_textbox_text_changed"]
[connection signal="value_changed" from="UI/VBoxContainer/team_numbox" to="." method="_on_team_numbox_value_changed"]
[connection signal="pressed" from="UI/VBoxContainer/btn_server" to="." method="_on_btn_server_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/btn_client" to="." method="_on_btn_client_pressed"]
